--- a/public/contact.html
+++ b/public/contact.html
@@ -130,7 +130,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-3"></div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
-                        <form class="form-horizontal contact-form" id="contact-form" role="form">
+                        <form class="form-horizontal contact-form" id="contact-form" role="form" action="/email">
                             <fieldset>
                                 <!-- Form Name -->
                                 <legend>Contact Form</legend>
@@ -383,8 +383,6 @@
     <!-- Isotope JS
         ============================================ -->
     <script src="js/isotope.pkgd.js"></script>
-    <!-- Google Map js -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgREM8KO8hjfbOC0R_btBhQsEQsnpzFGQ"></script>
     <!-- Validator js -->
     <script src="js/validator.min.js" type="text/javascript"></script>
     <!-- main JS
