user gets redirected appropriately after contact

--- a/public/contact.html
+++ b/public/contact.html
@@ -134,6 +134,8 @@
                             <fieldset>
                                 <!-- Form Name -->
                                 <legend>Contact Form</legend>
+                                <div class="contact-success">Message successfully sent!</div>
+                                <div class="contact-failed">Message did not go through.</div>
                                 <!-- Text input-->
                                 <div class="form-group">
                                     <label class="control-label pull-left" for="textinput1"><i class="fa fa-user" aria-hidden="true"></i></label>
