added before and after pic to about

--- a/public/about.html
+++ b/public/about.html
@@ -157,7 +157,7 @@
                         </div>
                         <div class="col-xs-12 col-md-5 col-sm-5">
                             <div class="about-img">
-                                <img class="img-responsive" src="img/about-right-img.png" alt="about-img">
+                                <img class="img-responsive" src="img/about-right-img.jpg" alt="about-img">
                             </div>
                         </div>
                     </div>
