Added training page and linked twitter feed

--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@
                                     <nav>
                                         <ul>
                                             <li class="active"><a href="/">Home</a></li>
+                                            <li><a href="/training">Training</a></li>
                                             <li><a href="/about">About</a></li>
                                             <li><a href="/contact">Contact</a></li>
                                         </ul>
@@ -105,6 +106,7 @@
                                     <nav id="dropdown">
                                         <ul>
                                             <li><a href="/">Home</a></li>
+                                            <li><a href="/training">Training</a></li>
                                             <li><a href="/about">About</a></li>
                                             <li><a href="/contact">Contact</a></li>
                                         </ul>
@@ -122,7 +124,7 @@
             <img src="img/slides/4-1.jpg" alt="image" class="img-responsive" />
             <div class="main-banner-inner">
                 <div class="main-banner-top-title">Hi</div>
-                <h1><span>I’m</span> John Smith</h1>
+                <h1><span>I’m</span> Don Frisone</h1>
                 <p>Simply dummy text of the printing and typesetting industry ared deartyLorem Ipsum has been the idustry's standard type speaty ecimen bookly five centurie.</p>
                 <ul class="main-banner-link">
                     <li>
@@ -158,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row what-i-do-bottom">
+                <!-- <div class="row what-i-do-bottom">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                         <div class="featured-box hvr-bounce-to-right">
                             <i class="fa fa-user" aria-hidden="true"></i>
@@ -180,7 +182,7 @@
                             <p>People Like</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- End being body builder area -->
@@ -244,88 +246,9 @@
             </div>
         </div>
         <!-- Why Choose 2 Area End Here -->
-        <!-- Start Expert trainers area -->
-        <div class="expert-trainer-area2">
-            <div class="container">
-                <h2 class="section-title-default title-bar-high">EXPERT TRAINERS</h2>
-                <p class="sub-title-default">Rmply dummy text of the printing and typesetting industry dorem Ipsum has been the industry's standard dummy text ever since thewhen an unknown printer took a gal survived five centuries.</p>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <div class="trainer-box2">
-                            <div class="trainer-img-holder">
-                                <img src="img/trainers/circle2.jpg" class="img-responsive" alt="team">
-                                <ul class="trainer-social">
-                                    <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                            <div class="trainer-content-holder">
-                                <h3><a href="#">Henry Elizabeth</a></h3>
-                                <p>Fitness</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <div class="trainer-box2">
-                            <div class="trainer-img-holder">
-                                <img src="img/trainers/circle1.jpg" class="img-responsive" alt="team">
-                                <ul class="trainer-social">
-                                    <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                            <div class="trainer-content-holder">
-                                <h3><a href="#">John Micle</a></h3>
-                                <p>Fitness</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <div class="trainer-box2">
-                            <div class="trainer-img-holder">
-                                <img src="img/trainers/circle3.jpg" class="img-responsive" alt="team">
-                                <ul class="trainer-social">
-                                    <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                            <div class="trainer-content-holder">
-                                <h3><a href="#">Susana Deo</a></h3>
-                                <p>Fitness</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                        <div class="trainer-box2">
-                            <div class="trainer-img-holder">
-                                <img src="img/trainers/circle4.jpg" class="img-responsive" alt="team">
-                                <ul class="trainer-social">
-                                    <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                            <div class="trainer-content-holder">
-                                <h3><a href="#">Alexander</a></h3>
-                                <p>Fitness</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Expert tainers area -->
+
         <!-- Start what clients say area  -->
-        <div class="what-client-area landing-bg">
+        <div class="what-client-area">
             <div class="container">
                 <div class="gym-carousel dot-control" data-loop="true" data-items="2" data-margin="0" data-autoplay="false" data-autoplay-timeout="10000" data-smart-speed="2000" data-dots="false" data-nav="true" data-nav-speed="false" data-r-x-small="1" data-r-x-small-nav="false" data-r-x-small-dots="true" data-r-x-medium="1" data-r-x-medium-nav="false" data-r-x-medium-dots="true" data-r-small="2" data-r-small-nav="false" data-r-small-dots="true" data-r-medium="2" data-r-medium-nav="false" data-r-medium-dots="true" data-r-large="2" data-r-large-nav="false" data-r-large-dots="true">
                     <div class="single-client-say">
@@ -404,7 +327,9 @@
                         <div class="col-lg-3 col-md-3 col-sm-6">
                             <div class="twitter-area">
                                 <h3>Twitter Feed</h3>
-                                <div class="twitter-list">
+                                <!-- <a href="https://twitter.com/Donmega054?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @Donmega054</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+                                <a class="twitter-timeline" data-chrome="noheader transparent" data-tweet-limit="1" data-width="220" data-height="400" data-theme="dark" href="https://twitter.com/Donmega054?ref_src=twsrc%5Etfw">Tweets by Donmega054</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                <!-- <div class="twitter-list">
                                     <ul>
                                         <li>
                                             <p><i class="fa fa-twitter" aria-hidden="true"></i>Looking for an awesome CREATIVE WordPress Theme? Esquise run even better.</p>
@@ -417,7 +342,7 @@
                                             <p><span>3 Days ago</span></p>
                                         </li>
                                     </ul>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6">
@@ -496,6 +421,7 @@
             </div>
         </footer>
         <!-- End copyright area -->
+        <!-- Footer goes here-->
     </div>
     <!-- End wrapper -->
     <a href="#" class="scrollToTop"></a>
