--- a/public/contact.html
+++ b/public/contact.html
@@ -75,6 +75,7 @@
                                     <nav>
                                         <ul>
                                             <li><a href="/">Home</a></li>
+                                            <li><a href="/training">Training</a></li>
                                             <li><a href="/about">About</a></li>
                                             <li class="active"><a href="/contact">Contact</a></li>
                                         </ul>
@@ -95,6 +96,7 @@
                                     <nav id="dropdown">
                                         <ul>
                                             <li><a href="/">Home</a></li>
+                                            <li><a href="/training">Training</a></li>
                                             <li><a href="/about">About</a></li>
                                             <li><a href="/contact">Contact</a></li>
                                         </ul>
