--- a/public/training.html
+++ b/public/training.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Gymedge | About</title>
+        <title>Training</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -86,8 +86,8 @@
                                     <nav>
                                         <ul>
                                             <li><a href="/">Home</a></li>
-                                            <li><a href="/training">Training</a></li>
-                                            <li class="active"><a href="/about">About</a></li>
+                                            <li class="active"><a href="/training">Training</a></li>
+                                            <li><a href="/about">About</a></li>
                                             <li><a href="/contact">Contact</a></li>
                                         </ul>
                                     </nav>
@@ -125,12 +125,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="innter-title">
-                            <h2>About Us</h2>
+                            <h2>Training</h2>
                         </div>
                         <div class="breadcrum-area">
                             <ul class="breadcrumb">
                                 <li><a href="#">Home</a></li>
-                                <li class="active">About</li>
+                                <li class="active">Training</li>
                             </ul>
                         </div>
                     </div>
@@ -138,13 +138,13 @@
             </div>
             <!-- End Inner Banner area -->
             <!-- Start About gymedge area -->
-            <div class="about-gymedge-area padding-top">
+            <div class="about-gymedge-area padding-top padding-bottom">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12 col-md-7 col-sm-7">
+                        <div class="col-xs-12 col-md-12 col-sm-12">
                             <div class="about-content-area">
                                 <div class="title-section">
-                                    <h2>About <span class="color-red">G</span>YM <span class="color">EDGE</span></h2>
+                                    <h2><span class="color-red">T</span>raining</h2>
                                 </div>
                                 <div class="content-section">
                                     <p>Quisque et lectus pulvinar, porttitor mi non, elementum dui. Morbi mi nisl, tincidunt sed venenatis eget, finibus eu mauris. Nullam nisi lacus, feugiat eget varegeellentesque dictum odio. Sed sollicitudin viverra est, at aliquam metus ultrices id. Duis eu purus vel nisl commodo facilisis vitae ut lectus. Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massa. Fusce dolor velit, blandit ac erat ac, vestibulum ornare diam. Sed sollicitudin viverra est, at aliquam metu eratys ultrices  tristique massaid.diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massa. Fusce dolor velit, blandit ac erat ac, vestibulum ornare diam. Sed sollicitudin viverra.</p>
@@ -157,94 +157,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-md-5 col-sm-5">
-                            <div class="about-img">
-                                <img class="img-responsive" src="img/about-right-img.jpg" alt="about-img">
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
             <!-- End About gymedge area -->
-            <!-- Start Why choose us area -->
-            <div class="choose-us-area padding-space">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xs-12 col-md-7 col-sm-7">
-                            <div class="title-section">
-                                <h2>Why Choose Us?</h2>
-                            </div>
-                            <div class="content-section">
-                                <p>Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui olutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massdolor velit, blandi.Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui olutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-md-5 col-sm-5">
-                             <ul class="counter-list">
-                                <li>
-                                    <div class="single-counter"><span class="counter">80</span>%<br>
-                                    <span class="title">Recommendation</span></div>
-                                </li>
-                                <li>
-                                    <div class="single-counter"><span class="counter">100</span>%<br>
-                                    <span class="title">Happy Clients</span></div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End Why choose us area -->
-            <!-- Start what clients say area  -->
-            <div class="what-client-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12">
-                            <div class="section-title">
-                                <h2>What Client’s Say</h2>
-                            </div>
-                            <div class="what-client-say">
-                                <div class="single-client-say">
-                                    <div class="pull-left client-picture">
-                                        <img src="img/client1.jpg" alt="client1">
-                                    </div>
-                                    <div class="media-body client-content">
-                                        <h3>Honey Jisa <span> / CEO</span></h3>
-                                        <p>Lorem ipsum dolor sit amet, consectet ad elit sed diam nonummy nibh euismod tincidunt ut laoreet dolore magnaLorem ipsum dolor sit amet, consectet ad elit sed onummy.</p>
-                                    </div>
-                                </div>
-                                <div class="single-client-say">
-                                    <div class="pull-left client-picture">
-                                        <img src="img/client2.jpg" alt="client2">
-                                    </div>
-                                    <div class="media-body client-content">
-                                        <h3>Tahmid Alom <span> / Founder</span></h3>
-                                        <p>Lorem ipsum dolor sit amet, consectet ad elit sed diam nonummy nibh euismod tincidunt ut laoreet dolore magnaLorem ipsum dolor sit amet, consectet ad elit sed onummy.</p>
-                                    </div>
-                                </div>
-                                <div class="single-client-say">
-                                    <div class="pull-left client-picture">
-                                        <img src="img/client1.jpg" alt="client1">
-                                    </div>
-                                    <div class="media-body client-content">
-                                        <h3>Honey Jisa <span> / CEO</span></h3>
-                                        <p>Lorem ipsum dolor sit amet, consectet ad elit sed diam nonummy nibh euismod tincidunt ut laoreet dolore magnaLorem ipsum dolor sit amet, consectet ad elit sed onummy.</p>
-                                    </div>
-                                </div>
-                                <div class="single-client-say">
-                                    <div class="pull-left client-picture">
-                                        <img src="img/client2.jpg" alt="client2">
-                                    </div>
-                                    <div class="media-body client-content">
-                                        <h3>Honey Jisa <span> / CEO</span></h3>
-                                        <p>Lorem ipsum dolor sit amet, consectet ad elit sed diam nonummy nibh euismod tincidunt ut laoreet dolore magnaLorem ipsum dolor sit amet, consectet ad elit sed onummy.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End what clients say area -->
+
             <!-- Start footer Area -->
             <footer>
                 <div class="footer-area">
