--- a/public/about.html
+++ b/public/about.html
@@ -144,16 +144,14 @@
                         <div class="col-xs-12 col-md-7 col-sm-7">
                             <div class="about-content-area">
                                 <div class="title-section">
-                                    <h2>About <span class="color-red">G</span>YM <span class="color">EDGE</span></h2>
+                                    <h2>About <span class="color-red">O</span>neKinship</h2>
                                 </div>
                                 <div class="content-section">
-                                    <p>Quisque et lectus pulvinar, porttitor mi non, elementum dui. Morbi mi nisl, tincidunt sed venenatis eget, finibus eu mauris. Nullam nisi lacus, feugiat eget varegeellentesque dictum odio. Sed sollicitudin viverra est, at aliquam metus ultrices id. Duis eu purus vel nisl commodo facilisis vitae ut lectus. Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massa. Fusce dolor velit, blandit ac erat ac, vestibulum ornare diam. Sed sollicitudin viverra est, at aliquam metu eratys ultrices  tristique massaid.diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massa. Fusce dolor velit, blandit ac erat ac, vestibulum ornare diam. Sed sollicitudin viverra.</p>
-                                </div>
-                                <div class="content-list">
-                                    <p><span><i class="fa fa-check" aria-hidden="true"></i>We have Gym Trainer</span></p>
-                                    <p>Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massdolor velit, blandi.</p>
-                                    <p><span><i class="fa fa-check" aria-hidden="true"></i>Modern Gym & Fitness Facilities</span></p>
-                                    <p>Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massdolor velit, blandi.</p>
+                                    <p>One Kinship LLC.</p>
+                                    <p>I am an online fitness coach! What does this mean exactly? I want to help people be the best they can be without unrealistic expectations. My name is Don Frisone and I am the CEO of One Kinship.</p>    
+                                    <p>About 4 years ago I weighed 380 pounds. I was over 65% body fat and morbidly obese. I was on the verge of diabetes and hypertrophic cardiomyopathy. I was in a bad spot and at 28 years old,  Doctors were saying I would need heart surgery by the time I was 32. They said I would need to change my ways or I would be on a whole host of medications for the rest of my life. At this time in my life I was depressed, lazy, and barely holding on. The only thing kept me going was my wife and the birth of my daughter. I lost my father when I was 17 years old to heart disease, and you’d think I would know better. Instead, I was far worse.</p>
+                                    <p>One Kinship is being built on these foundations. I want to provide a place people can come to achieve their goals. If you are looking to lose weight, build muscle, improve your athletic ability, or just be healthier, you are at the right place.</p>
+                                    <p>Take a look around the site. I am here to help others become the best version of themselves.  I am not saying it will be easy, it won’t happen overnight, but I will be here as a resource and as a support to get you to your goals. Take it from someone who lost over 180 pounds, you can do this and I will help show you the path!</p>
                                 </div>
                             </div>
                         </div>
