--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
                         <a class="skype" href="#"><i class="fa fa-skype" aria-hidden="true"></i></a>
                     </li>
                 </ul>
-                <div class="button"><a href="#" class="btn custom-button" data-title="Join With Us">Join With Us</a></div>
+                <!-- <div class="button"><a href="#" class="btn custom-button" data-title="Join With Us">Join With Us</a></div> -->
             </div>
         </div>
         <!-- Main Banner area-->
