--- a/public/about.html
+++ b/public/about.html
@@ -173,14 +173,15 @@
                                 <h2>Why Choose Us?</h2>
                             </div>
                             <div class="content-section">
-                                <p>Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui olutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massdolor velit, blandi.Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui olutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. </p>
+                                <p>Congratulations on making it this far. You're probably thinking that you'd like to make some changes to your lifestyle, you don't have enough time, it's too hard. It’s time to realize that you do have the time. All you need is as little as 30 minutes a day and the right meal plan. I won't lie to you. Tt will be hard, but not too hard. Your body and your mind are two amazing things, and for too long you have told it "I can't". Now it's time to tell it "I can" all it takes is finding your WHY. </p>
+                                <p>Why do you want to make a change now? Your WHY must be stronger than your CAN’T. I promise that you will have someone with you every step of the way. We will make mistakes, we will fail, but we will get back up and we will succeed. We won't let a bad choice turn into a bad day or a bad month. Together we can do anything! Giving me a chance I will show you that for limited financial burden, a fraction of your 24 hour day and a promise of you giving it your all, we can make anything happen.</p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-5 col-sm-5">
                              <ul class="counter-list">
                                 <li>
-                                    <div class="single-counter"><span class="counter">80</span>%<br>
-                                    <span class="title">Recommendation</span></div>
+                                    <div class="single-counter"><span class="counter">32.2</span>%<br>
+                                    <span class="title">US Obesity Rate</span></div>
                                 </li>
                                 <li>
                                     <div class="single-counter"><span class="counter">100</span>%<br>
