--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
             <div class="main-banner-inner">
                 <div class="main-banner-top-title">Hi</div>
                 <h1><span>I’m</span> Don Frisone</h1>
-                <p>Simply dummy text of the printing and typesetting industry ared deartyLorem Ipsum has been the idustry's standard type speaty ecimen bookly five centurie.</p>
+                <p>Be the Best You, You Can Be</p>
                 <ul class="main-banner-link">
                     <li>
                         <a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -151,7 +151,9 @@
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <div class="what-i-do-content">
                             <h2>What I<span> Do?</span></h2>
-                            <p>Rmply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. type and scrambled it to make a type specimen book. </p>
+                            <p>Congratulations on making the best decision of your life. The choice to be healthy and happy is one that we find too many excuses for. My goal is to show you that you can be the best version of yourself, all while enjoying a healthy and balanced lifestyle. Throughout our journey together, we are going to craft a plan that works for you, while making some tweaks and adjustments so you can do the things you enjoy. Whether it's climbing mountains,
+                                laying in the beach, or chasing your kids around, we will find a plan that can help you do those things while still enjoying a pizza once in a while!
+                                </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -199,13 +201,13 @@
                                 <div class="panel-heading">
                                     <h3 class="panel-title">
                                             <a aria-expanded="false" class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                                <span>01.</span> Addition of Energy
+                                                <span>01.</span> Passion
                                             </a>
                                         </h3>
                                 </div>
                                 <div aria-expanded="false" id="collapseOne" role="tabpanel" class="panel-collapse collapse">
                                     <div class="panel-body">
-                                        Simply dummy text of the printing and typesetting industryorem Ipsum has been the industry's standard dummy text ever since when an unknown printer took a galley.
+                                        I was once almost 400lbs and would probably be seeing a heart doctor right now if it weren't for the changes I made. I care about all my clients, so you will have one on one time with me where we can discuss anything! This is a partnership where if you fail, I fail. As I have shown in the past, I will not fail.
                                     </div>
                                 </div>
                             </div>
@@ -213,13 +215,13 @@
                                 <div class="panel-heading">
                                     <h3 class="panel-title">
                                             <a aria-expanded="false" class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                                                <span>02.</span> Beauty of Body
+                                                <span>02.</span> Balance
                                             </a>
                                         </h3>
                                 </div>
                                 <div aria-expanded="false" id="collapseTwo" role="tabpanel" class="panel-collapse collapse in">
                                     <div class="panel-body">
-                                        Simply dummy text of the printing and typesetting industryorem Ipsum has been the industry's standard dummy text ever since when an unknown printer took a galley.
+                                        Depending on your goals, you don't have to go to the gym 2 hours twice a day and eat grilled chicken and brown rice every 4 hours. We will build a customized meal plan that will work for you and allow you to indulge once in a while.
                                     </div>
                                 </div>
                             </div>
@@ -227,13 +229,13 @@
                                 <div class="panel-heading">
                                     <h3 class="panel-title">
                                             <a aria-expanded="false" class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                                <span>03.</span> Mind and Soul
+                                                <span>03.</span> Training Plan
                                             </a>
                                         </h3>
                                 </div>
                                 <div aria-expanded="false" id="collapseThree" role="tabpanel" class="panel-collapse collapse">
                                     <div class="panel-body">
-                                        Simply dummy text of the printing and typesetting industryorem Ipsum has been the industry's standard dummy text ever since when an unknown printer took a galley.
+                                        Have a demanding full time job? 3 kids have you running around? With my customized plan we can find you 45 minutes a day a 3-5 times a week that will allow you to train and lose weight or build muscle without having to sacrifice time to the other important things in your life!
                                     </div>
                                 </div>
                             </div>
