--- a/public/contact.html
+++ b/public/contact.html
@@ -114,7 +114,7 @@
             <div class="container">
                 <div class="row">
                     <div class="innter-title">
-                        <h2>Contact Us</h2>
+                        <h2>Contact</h2>
                     </div>
                     <div class="breadcrum-area">
                         <ul class="breadcrumb">
