updated some images, started training page

--- a/public/training.html
+++ b/public/training.html
@@ -147,13 +147,33 @@
                                     <h2><span class="color-red">T</span>raining</h2>
                                 </div>
                                 <div class="content-section">
-                                    <p>Quisque et lectus pulvinar, porttitor mi non, elementum dui. Morbi mi nisl, tincidunt sed venenatis eget, finibus eu mauris. Nullam nisi lacus, feugiat eget varegeellentesque dictum odio. Sed sollicitudin viverra est, at aliquam metus ultrices id. Duis eu purus vel nisl commodo facilisis vitae ut lectus. Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massa. Fusce dolor velit, blandit ac erat ac, vestibulum ornare diam. Sed sollicitudin viverra est, at aliquam metu eratys ultrices  tristique massaid.diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massa. Fusce dolor velit, blandit ac erat ac, vestibulum ornare diam. Sed sollicitudin viverra.</p>
+                                    <p>Quisque et lectus pulvinar, porttitor mi non, elementum dui. Morbi mi nisl, tincidunt sed venenatis eget, finibus eu mauris. Nullam nisi lacus, feugiat eget varegeellentesque dictum odio. Sed sollicitudin viverra est, at aliquam metus ultrices id. Duis eu purus vel nisl commodo facilisis vitae ut lectus. Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massa. Fusce dolor velit, blandit ac erat ac, vestibulum ornare diam.</p>
                                 </div>
                                 <div class="content-list">
-                                    <p><span><i class="fa fa-check" aria-hidden="true"></i>We have Gym Trainer</span></p>
+                                    <p><span><i class="fa fa-check" aria-hidden="true"></i>Personalized workout routines</span></p>
                                     <p>Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massdolor velit, blandi.</p>
-                                    <p><span><i class="fa fa-check" aria-hidden="true"></i>Modern Gym & Fitness Facilities</span></p>
+                                    <p><span><i class="fa fa-check" aria-hidden="true"></i>Adaptive meal plans</span></p>
                                     <p>Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massdolor velit, blandi.</p>
+                                    <p><span><i class="fa fa-check" aria-hidden="true"></i>One-on-one video or call sessions</span></p>
+                                    <p>Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massdolor velit, blandi.</p>    
+                                    <p><span><i class="fa fa-check" aria-hidden="true"></i>Unlimited messaging</span></p>
+                                    <p>Sed elementum dapibus tellus, a dictum metus interdum ac. Nullam condimentum, dui volutpat fringilla molestie, libero tortor ultrices lorem, at tempus diam purus non velit. Aliquam vel nulla eleifend, consequat elit id, tristique massdolor velit, blandi.</p>    
+
+                                </div>
+
+                                <div class="title-section padding-top">
+                                        <h2><span class="color-red">P</span>ricing</h2>
+                                </div>
+                                <div class="row text-center">
+                                    <div class="col-md-3 col-lg-3"></div>
+                                    <div class="col-md-3 col-lg-3">
+                                        <h1>Monthly</h1>
+                                        <p>$124.99/mo</p>        
+                                    </div>
+                                    <div class="col-md-3 col-lg-3">
+                                        <h1>Package</h1>
+                                        <p>$100/mo</p>  
+                                    </div>
                                 </div>
                             </div>
                         </div>
