--- a/public/404.html
+++ b/public/404.html
@@ -189,12 +189,15 @@
             <div class="footer-area">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-6">
+                        <div class="col-lg-4 col-md-4 col-sm-6">
                             <div class="about-company">
-                                <h3>About Company</h3>
-                                <p>Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim dignissim. Suspen disse at
-                                    eros tempus, congueconsequat.Fusce sit amet urna feugiat.Praesent vel rutrum purus. Nam
-                                    vel dui eu risus.</p>
+                                <h3>About</h3>
+                                <p>My name is Don Frisone and I am a fitness coach who is dedicated to helping you reach your
+                                    goals. I believe in setting obtainable milestones and celebrating every victory, regardless
+                                    of how small. I will be your partner through your entire jounrey, and I will hold both
+                                    you and myself accountable every step of the way. If you are ready to start your fitness
+                                    journey, visit the training page to see what my plan will offer, and visit the contact
+                                    page for any inquiries.</p>
                                 <div class="social-icons">
                                     <ul class="social-link">
                                         <li class="first">
@@ -234,84 +237,21 @@
                         <div class="col-lg-3 col-md-3 col-sm-6">
                             <div class="twitter-area">
                                 <h3>Twitter Feed</h3>
-                                <div class="twitter-list">
-                                    <ul>
-                                        <li>
-                                            <p>
-                                                <i class="fa fa-twitter" aria-hidden="true"></i>Looking for an awesome CREATIVE WordPress Theme? Esquise run even better.
-                                            </p>
-                                            <a href="#">http://t.co/0WWEMQEQ48</a>
-                                            <p>
-                                                <span>3 Days ago</span>
-                                            </p>
-                                        </li>
-                                        <li>
-                                            <p>
-                                                <i class="fa fa-twitter" aria-hidden="true"></i>Looking for an awesome CREATIVE WordPress Theme? Esquise run even better.
-                                            </p>
-                                            <a href="#">http://t.co/0WWEMQEQ48</a>
-                                            <p>
-                                                <span>3 Days ago</span>
-                                            </p>
-                                        </li>
-                                    </ul>
-                                </div>
+                                <a class="twitter-timeline" data-chrome="noheader transparent" data-tweet-limit="1" data-width="220" data-height="400" data-theme="dark"
+                                    href="https://twitter.com/Donmega054?ref_src=twsrc%5Etfw">Tweets by Donmega054</a>
+                                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6">
-                            <div class="flickr-photos">
-                                <h3>Flickr Photos</h3>
-                                <div class="flickr-list">
-                                    <ul>
-                                        <li>
-                                            <a class="fancybox" href="img/flickr/flickr1.png" data-fancybox-group="flickr" title="flickr1">
-                                                <img src="img/flickr/flickr1.png" alt="">
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="fancybox" href="img/flickr/flickr2.png" data-fancybox-group="flickr" title="flickr2">
-                                                <img src="img/flickr/flickr2.png" alt="">
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="fancybox" href="img/flickr/flickr3.png" data-fancybox-group="flickr" title="flickr3">
-                                                <img src="img/flickr/flickr3.png" alt="">
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="fancybox" href="img/flickr/flickr4.png" data-fancybox-group="flickr" title="flickr4">
-                                                <img src="img/flickr/flickr4.png" alt="">
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="fancybox" href="img/flickr/flickr5.png" data-fancybox-group="flickr" title="flickr5">
-                                                <img src="img/flickr/flickr5.png" alt="">
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="fancybox" href="img/flickr/flickr6.png" data-fancybox-group="flickr" title="flickr6">
-                                                <img src="img/flickr/flickr6.png" alt="">
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                        <div class="col-lg-1 col-md-1 col-sm-12">
+                            <!-- Placeholder -->
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6">
+                        <div class="col-lg-4 col-md-4 col-sm-6">
                             <div class="corporate-office">
-                                <h3>Corporate Office</h3>
-                                <div class="corporate-address">
-                                    <ul>
-                                        <li>
-                                            <i class="fa fa-send" aria-hidden="true"></i>44 New Design Street, rne 005</li>
-                                        <li>
-                                            <i class="fa fa-phone" aria-hidden="true"></i>(01) 800 433 633</li>
-                                        <li>
-                                            <i class="fa fa-envelope-o" aria-hidden="true"></i>info@gymedge.com</li>
-                                        <li>
-                                            <i class="fa fa-fax" aria-hidden="true"></i>Fax : (123) 4657890</li>
-                                    </ul>
-                                </div>
+                                <h3>Questions? Comments?</h3>
+                                <p>
+                                    The door is always open! Please click below to get redirected to the contact form and I will get back to you as soon as possible!
+                                </p>
+                                <a href='/contact'>Contact</a>
                             </div>
                         </div>
                     </div>
@@ -322,45 +262,44 @@
             <div class="copy-right-area">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-9 col-md-9 col-sm-9">
+                        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                             <div class="copy-right">
-                                <p>© Copyrights gymedge 2016. All rights reserved. Designed by
-                                    <a href="https://www.radiustheme.com/">
-                                        RadiusTheme</a>
-                                </p>
+                                <p>© Copyrights OneKinship 2018. All rights reserved.</p>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-3">
-                            <div class="visa-card">
-                                <ul>
-                                    <li>
-                                        <a href="#">
-                                            <img src="img/visa-card.png" alt="">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="img/descover.png" alt="">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="img/paypal.png" alt="">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="img/card.png" alt="">
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+                        <!-- Commented out until payment functionality is added later-->
+                        <!-- <div class="col-lg-3 col-md-3 col-sm-3">
+                                <div class="visa-card">
+                                    <ul>
+                                        <li>
+                                            <a href="#">
+                                                <img src="img/visa-card.png" alt="visa-card">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="img/descover.png" alt="descover">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="img/paypal.png" alt="paypal">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="img/card.png" alt="card">
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div> -->
                     </div>
                 </div>
             </div>
         </footer>
         <!-- End copyright area -->
+        <!-- Footer goes here-->
     </div>
     <!-- End wrapper -->
     <a href="#" class="scrollToTop"></a>
