remove what clients say areas

--- a/public/about.html
+++ b/public/about.html
@@ -247,7 +247,7 @@
         </div>
         <!-- End Why choose us area -->
         <!-- Start what clients say area  -->
-        <div class="what-client-area">
+        <!-- <div class="what-client-area">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
@@ -307,7 +307,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- End what clients say area -->
         <!-- Start footer Area -->
         <footer>
