--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
         <!-- Why Choose 2 Area End Here -->
 
         <!-- Start what clients say area  -->
-        <div class="what-client-area">
+        <!-- <div class="what-client-area">
             <div class="container">
                 <div class="gym-carousel dot-control" data-loop="true" data-items="2" data-margin="0" data-autoplay="false" data-autoplay-timeout="10000"
                     data-smart-speed="2000" data-dots="false" data-nav="true" data-nav-speed="false" data-r-x-small="1" data-r-x-small-nav="false"
@@ -351,7 +351,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- End what clients say area -->
         <!-- Start footer Area -->
         <footer>
