updated home page wording

--- a/public/index.html
+++ b/public/index.html
@@ -264,6 +264,8 @@
                                         Depending on your goals, you don't have to go to the gym 2 hours twice a day and eat grilled chicken and brown rice every
                                         4 hours. We will build a customized meal plan that will work for you and allow you
                                         to indulge once in a while.
+                                        <br />
+                                        <br /> Balance is the key to reaching your goals.
                                     </div>
                                 </div>
                             </div>
@@ -277,9 +279,12 @@
                                 </div>
                                 <div aria-expanded="false" id="collapseThree" role="tabpanel" class="panel-collapse collapse">
                                     <div class="panel-body">
-                                        Have a demanding full time job? 3 kids have you running around? With my customized plan we can find you 45 minutes a day
-                                        a 3-5 times a week that will allow you to train and lose weight or build muscle without
-                                        having to sacrifice time to the other important things in your life!
+                                        Many fail because they plan for an optimal workout schedule, and end up not being able to fit it in with their current lifestyle.
+                                        <br />
+                                        <br/> Do you have a demanding full time job? Three kids have you running around? With
+                                        my customized plans, we can find you 45 minutes a day, 3-5 times a week, that will
+                                        allow you to train and lose weight or build muscle without having to sacrifice time
+                                        to the other important things in your life!
                                     </div>
                                 </div>
                             </div>
